Fixed main listing responsiveness and styling
-fixed responsive listing view overlap

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,4 +1,17 @@
 .Cart {
+  width: 100%;
+}
+.Cart .labels {
+  background: red;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Cart .labels p {
+  width: 100%;
+}
+
+/* .Cart {
   border-top: solid 1px #e3e3e3;
   margin: 0;
   padding: 0;
@@ -89,4 +102,4 @@
     width: 100px;
     height: 100px;
   }
-}
+} */
