--- a/src/Components/Listings/Listings.css
+++ b/src/Components/Listings/Listings.css
@@ -26,6 +26,7 @@
   border: #ddd 1px solid;
   border-radius: 3px;
   margin-left: 10px;
+  align-self: flex-start;
 }
 .Listings .listing img {
   height: 100%;
@@ -40,7 +41,7 @@
   position: relative;
   height: unset;
   width: unset;
-  max-width: 90vw;
+  max-width: 80vw;
   box-shadow: 5px 5px 10px #888;
   background: #fff;
   padding: 0;
@@ -73,14 +74,15 @@
 }
 
 .Listings .listing .details {
-  font-size: 16px;
+  font-size: 18px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   text-align: left;
   padding-left: 10px;
   width: 100%;
+  height: 100%;
 }
 
 .Listings .listing .details .price {
@@ -91,8 +93,9 @@
 .itemGrid {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px, 230px));
   grid-auto-rows: 500px;
+  justify-content: center;
 }
 
 .itemGrid .item {
@@ -142,18 +145,23 @@
   border-radius: 10px;
   margin: auto;
 }
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 650px) {
   .Listings .listing {
-    height: 150px;
+    height: unset;
+    min-height: 100px;
   }
   .Listings .listing .container {
-    max-width: 150px;
+    max-width: 100px;
   }
   .Listings .listing .details {
-    font-size: 14px;
+    font-size: 10px;
+  }
+  .Listings .listing .details p {
+    margin: 0;
+    height: 100%;
   }
   .Listings .listing .details .price {
-    font-size: 17px;
+    font-size: 14px;
     font-weight: normal;
   }
   .Listings .listing .oos {
